--- a/backend/package.json
+++ b/backend/package.json
@@ -1,12 +1,14 @@
 {
   "dependencies": {
+    "axios": "^1.7.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mongoose": "^8.5.1",
+    "mongoose": "^8.5.2",
     "nodemon": "^3.1.4"
   },
   "scripts": {
     "start": "nodemon app.js"
-  }
+  },
+  "type": "module"
 }
