--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.7",
+    "axios": "^1.7.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1",
+    "react-redux": "^9.1.2",
+    "redux-persist": "^6.0.0",
     "framer-motion": "^11.3.17"
-
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
