--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
 PORT = 5000
-MONGO = mongodb+srv://adithyaeg5:wFgrnPkywQ75kAnC@cluster0.lanflot.mongodb.net/
+MONGO = mongodb+srv://akhiljosetcr:kR1i0eZiPMZBqZGl@college-hostel.daqchog.mongodb.net/?retryWrites=true&w=majority&appName=College-Hostel
