--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.5.2",
+    "mysql2": "^3.11.3",
     "nodemon": "^3.1.4"
   },
   "scripts": {
