--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.3",
+    "framer-motion": "^11.3.17",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.25.1",
+    "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
-    "redux-persist": "^6.0.0",
-    "framer-motion": "^11.3.17"
+    "react-router-dom": "^6.25.1",
+    "react-toastify": "^10.0.6",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
